# coisas_projeto_automcs

motor_de_passo/motor_de_passo/: motor_de_passo.ino
projeto_braco_1/: bispo_v4.3mf  bispo_v4_N0.2_24m_0,12mm_175C_PLA_ENDER3V2.gcode  braco_1.3mf  braco_1.py  braco_1.stl  braco_1_v2.3mf  braco_2.3mf  braco_2.py  braco_2.stl  cavalo_v4.3mf  cavalo_v4_N0.2_25m_0,12mm_175C_PLA_ENDER3V2.gcode  coisa.3mf  coisa.stl  coisa_N0.2_1h31m_0.12mm_175C_PLA_ENDER3V2.gcode  medidas_motor_1.txt  motor_1.py  motor_2.py  novo_prendedor.3mf  novo_prendedor.stl  novo_teste_0.0mm.stl  novo_teste_0.1mm.stl  novo_teste_0.2mm.stl  novo_teste_0.3mm.stl  novo_teste_0.4mm.stl  pecas_v1.3mf  pecas_v1_N0.2_11m_0,12mm_175C_PLA_ENDER3V2.gcode  pecas_v2_N0.2_11m_0,12mm_175C_PLA_ENDER3V2.gcode  pecas_v3.3mf  pecas_v3_N0.2_11m_0,12mm_175C_PLA_ENDER3V2.gcode  pecas_v4.3mf  pecas_v4_N0.2_12m_0,12mm_175C_PLA_ENDER3V2.gcode  pecas_v4_N0.2_22m_0,12mm_175C_PLA_ENDER3V2.gcode  pecas_v5.3mf  pecas_v5_N0.2_21m_0,12mm_175C_PLA_ENDER3V2.gcode  prende_motor.py  suporte_ima.3mf  suporte_ima_N0.2_1h41m_0.12mm_175C_PLA_ENDER3V2.gcode  suporte_ima_N0.2_1h47m_0.12mm_175C_PLA_ENDER3V2.gcode  suporte_motor_1.3mf  suporte_motor_1.stl  (+24 more)
stepper_pio/: CMakeLists.txt  main.c  main.cpp  stepper.pio
